# Image-Processing

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.py
include/: box.hpp  image.hpp
src/: box.cpp  image.cpp  main.cpp
